Added JWT Authentication

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
+  "TokenKey":"some complex secret key", //this should not be added to open source
   "Logging": {
     "LogLevel": {
       "Default": "Information",
