Client Login/Register + Routing

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
-  "TokenKey":"some complex secret key", //this should not be added to open source
+  "TokenKey":"some_complex_secret_key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
